Arrumando bug do background z-index

--- a/src/Components/Background/Background.css
+++ b/src/Components/Background/Background.css
@@ -35,6 +35,7 @@
     padding: 0;
     background: var(--backgroundPage-color);
     overflow: hidden;
+    z-index: -2;
 }
 .background li {
     position: absolute;
